[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.115.4",
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-openai==0.2.6",
    "langsmith==0.1.147",
    "gunicorn==23.0.0",
    "neo4j==5.26.0",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "redis==5.2.0",
    "uvicorn==0.32.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]